--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,7 +21,7 @@
 
     <!-- TABS -->
     <string name="buttons_title">Buttons</string>
-    <string name="statusbar_title">StatusBar</string> 
+    <string name="statusbar_title">StatusBar</string>
     <string name="ui_title">Ui</string>
 
     <!-- Volume rocker wake -->
@@ -55,4 +55,14 @@
     <string name="status_bar_toggle_brightness">Brightness control</string>
     <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
 
-    </resources>
+    <!-- Color Picker -->
+    <string name="dialog_color_picker">Color Picker</string>
+    <string name="press_color_to_apply">Press on color below to apply</string>
+    <string name="arrow_right">→</string>
+    <string name="arrow_down">↓</string>
+    <string name="hex">Hex:</string>
+    <string name="hex_hint">#ff000000</string>
+    <string name="set">Set</string>
+    <string name="color_default">Default</string>
+
+</resources>
