--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,14 +21,18 @@
 
     <!-- TABS -->
     <string name="buttons_title">Buttons</string>
-    <string name="ui_title">Ui</string> 
+    <string name="ui_title">Ui</string>
 
     <!-- Volume rocker wake -->
     <string name="volume_rocker_wake_title">Volume rocker wake</string>
     <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
 
- <!-- Volume rocker music control -->
+    <!-- Volume rocker music control -->
     <string name="volume_rocker_music_controls_title">Playback control</string>
     <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
+
+    <!-- Wake on Plug -->
+    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
+    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
 
     </resources>
